--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+address{
+  margin-left: 90px;
+}
 .carousel-caption{
 	bottom:0% !important;
 }
@@ -13,6 +16,9 @@
 }
 .indent{
 	text-indent: 25px !important;
+}
+.inscreva-se{
+  float: center;
 }
 #comissoes{
 
